Complete Pre-Deployment Audit and Fixes