@@ -1,23 +1,37 @@
 package com.belledonne.ecommerce.config;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
+
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+
 @Configuration
 public class CorsConfig {
+
+    @Value("${cors.allowed-origins:http://localhost:5173,http://localhost:3000}")
+    private String allowedOriginsProperty;
+
     @Bean
     public CorsFilter corsFilter() {
         CorsConfiguration config = new CorsConfiguration();
-        // Allow your React frontend
-        config.setAllowedOrigins(List.of(
-            "http://localhost:5173",
-            "http://localhost:3000",
-            "http://127.0.0.1:5173"
-        ));
+
+        // Build allowed origins from application property (supports comma-separated list)
+        List<String> origins = new ArrayList<>(Arrays.asList(allowedOriginsProperty.split(",")));
+
+        // Also add FRONTEND_URL env var if set (for production deployment)
+        String frontendUrl = System.getenv("FRONTEND_URL");
+        if (frontendUrl != null && !frontendUrl.isBlank() && !origins.contains(frontendUrl.trim())) {
+            origins.add(frontendUrl.trim());
+        }
+
+        config.setAllowedOrigins(origins);
+
         // Allow all HTTP methods
         config.setAllowedMethods(Arrays.asList(
             "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"
@@ -28,6 +42,7 @@ public class CorsConfig {
         config.setAllowCredentials(true);
         // Cache preflight for 1 hour
         config.setMaxAge(3600L);
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
         return new CorsFilter(source);
